Status Invest Linear Regression calc

--- a/notebooks/fundamentus.ipynb
+++ b/notebooks/fundamentus.ipynb
@@ -50,11 +50,11 @@
      "output_type": "stream",
      "text": [
       "Papel  Cotação   P/L  P/VP   PSR Div.Yield  P/Ativo  P/Cap.Giro  P/EBIT  P/Ativ Circ.Liq  EV/EBIT  EV/EBITDA\n",
-      "VALE3    68.36  6.53  1.63 1.504     8.89%    0.696       60.23    3.88            -1.78     4.51       3.76\n",
-      "PETR4    39.28  3.74  1.33 0.955    18.45%    0.500      -70.58    2.13            -1.04     3.12       2.38\n",
-      "ITUB4    32.33 10.20  1.81 0.000     3.89%    0.000        0.00    0.00             0.00     0.00       0.00\n",
-      "BBDC4    15.36 11.00  1.02 0.000     7.25%    0.000        0.00    0.00             0.00     0.00       0.00\n",
-      "BBAS3    56.58  4.85  1.01 0.000     8.07%    0.000        0.00    0.00             0.00     0.00       0.00\n",
+      "VALE3    68.78  6.57  1.64 1.513     8.84%    0.701       60.60    3.90            -1.79     4.53       3.78\n",
+      "PETR4    40.32  3.84  1.36 0.981    17.97%    0.513      -72.45    2.18            -1.07     3.17       2.42\n",
+      "ITUB4    32.43 10.23  1.81 0.000     3.87%    0.000        0.00    0.00             0.00     0.00       0.00\n",
+      "BBDC4    15.27 10.94  1.01 0.000      7.3%    0.000        0.00    0.00             0.00     0.00       0.00\n",
+      "PRIO3    44.09  8.63  3.05 3.877     0.16%    1.379       32.01    6.97            -3.73     8.44       6.32\n",
       "--- Total stock tickers in the list: 983 ---\n"
      ]
     }
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stock tickers in the list: 215 ---\n"
+      "--- Filtered stock tickers in the list: 213 ---\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 215/215 [05:00<00:00,  1.40s/it]\n"
+      "100%|██████████| 213/213 [04:16<00:00,  1.20s/it]\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stocks data in the list: 214 ---\n"
+      "--- Filtered stocks data in the list: 212 ---\n"
      ]
     }
    ],
@@ -176,12 +176,12 @@
      "output_type": "stream",
      "text": [
       "Papel  Tipo                   Empresa                           Setor                          Subsetor  Cotação\n",
-      "VALE3 ON NM                VALE ON NM                       Mineração                Minerais Metálicos    68.36\n",
-      "PETR4    PN              PETROBRAS PN Petróleo, Gás e Biocombustíveis Exploração, Refino e Distribuição    39.28\n",
-      "ITUB4 PN N1        ITAUUNIBANCO PN N1      Intermediários Financeiros                            Bancos    32.33\n",
-      "BBDC4 PN N1 BANCO BRADESCO S.A. PN N1      Intermediários Financeiros                            Bancos    15.36\n",
-      "BBAS3    ON   BANCO DO BRASIL S.A. ON      Intermediários Financeiros                            Bancos    56.58\n",
-      "--- Total stock data rows in the list: 214 ---\n"
+      "VALE3 ON NM                VALE ON NM                       Mineração                Minerais Metálicos    68.78\n",
+      "PETR4    PN              PETROBRAS PN Petróleo, Gás e Biocombustíveis Exploração, Refino e Distribuição    40.32\n",
+      "ITUB4 PN N1        ITAUUNIBANCO PN N1      Intermediários Financeiros                            Bancos    32.43\n",
+      "BBDC4 PN N1 BANCO BRADESCO S.A. PN N1      Intermediários Financeiros                            Bancos    15.27\n",
+      "PRIO3    ON               PETRORIO ON Petróleo, Gás e Biocombustíveis Exploração, Refino e Distribuição    44.09\n",
+      "--- Total stock data rows in the list: 212 ---\n"
      ]
     }
    ],
