--- a/notebooks/statusinvest.ipynb
+++ b/notebooks/statusinvest.ipynb
@@ -12,12 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy\n",
     "import os\n",
+    "import pandas\n",
     "import sys\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression  # scikit-learn\n",
+    "from tqdm import tqdm\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
@@ -52,11 +57,11 @@
      "output_type": "stream",
      "text": [
       "TICKER  PRECO    DY   P/L  P/VP  P/ATIVOS  MARGEM BRUTA  MARGEM EBIT  MARG. LIQUIDA  P/EBIT\n",
-      " VALE3  69.50  8.75  6.64  1.66      0.71         40.12        31.07          23.03    4.92\n",
-      " PETR4  39.96 18.31  3.81  1.35      0.51         51.08        38.69          25.53    2.51\n",
-      " ITUB4  32.81  3.83 10.10  1.75      0.13         30.03         9.92           8.30    8.46\n",
-      " BBDC4  15.52  7.17 11.93  0.99      0.09         30.94         3.95           6.18   18.68\n",
-      " BBAS3  56.97  8.03  4.90  0.99      0.07         32.66        15.94          12.40    3.81\n",
+      " VALE3  67.76  8.97  6.47  1.62      0.69         40.12        31.07          23.03    4.80\n",
+      " PETR4  40.45 18.09  3.85  1.37      0.51         51.08        38.69          25.53    2.54\n",
+      " ITUB4  32.78  3.89 10.10  1.75      0.13         30.03         9.92           8.30    8.45\n",
+      " BBDC4  15.35  7.25 11.80  0.98      0.09         30.94         3.95           6.18   18.48\n",
+      " BBAS3  56.45  8.11  4.86  0.98      0.07         32.66        15.94          12.40    3.78\n",
       "--- Total stock tickers in the list: 620 ---\n"
      ]
     }
@@ -105,13 +110,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get Historical data from the most liquid stock in the list"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -132,28 +130,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Stocks extra infos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 219/219 [04:54<00:00,  1.35s/it]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                           0\n",
-      "Vol Histórica      26.681932\n",
-      "Tag Along             100.0%\n",
-      "Tickers Opções         922.0\n",
-      "Segmento        Novo Mercado\n",
-      "Free Float            98.01%\n"
+      "      Vol Histórica Tag Along Tickers Opções      Segmento Free Float\n",
+      "VALE3     26.615409    100.0%         1000.0  Novo Mercado     98.01%\n",
+      "PETR4     30.550062    100.0%         1309.0       Nível 2     63.39%\n",
+      "ITUB4     22.506656     80.0%          414.0       Nível 1     52.89%\n",
+      "BBDC4     28.159352     80.0%          488.0       Nível 1     62.46%\n",
+      "BBAS3       22.7558    100.0%          639.0  Novo Mercado     49.58%\n",
+      "...             ...       ...            ...           ...        ...\n",
+      "SGPS3    146.992397    100.0%            0.0  Novo Mercado     47.08%\n",
+      "EUCA4     31.841553        --            0.0       Nível 1     74.79%\n",
+      "CAMB3     46.587811        --            0.0                   100.0%\n",
+      "ELMD3     45.772554    100.0%            0.0  Novo Mercado     37.63%\n",
+      "LAND3     32.747721    100.0%            0.0  Novo Mercado     31.81%\n",
+      "\n",
+      "[219 rows x 5 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "extra_infos = StockExtraInfosScraper(stock_ticker).dataframe_format\n",
+    "extra_infos_df = None\n",
+    "\n",
+    "for stock_ticker in tqdm(stocks_general_data_df.index):\n",
+    "    ei_df = StockExtraInfosScraper(stock_ticker).dataframe_format\n",
+    "    ei_df.columns = [stock_ticker]\n",
+    "    ei_df = ei_df.T\n",
+    "    extra_infos_df = pandas.concat([extra_infos_df, ei_df])\n",
     "\n",
     "#show sample of the retrieved data\n",
-    "print(extra_infos)"
+    "print(extra_infos_df)"
    ]
   },
   {
@@ -165,90 +198,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                  2008   2009   2010     2011\n",
-      "dy                                 NaN    NaN    NaN   7.3140\n",
-      "p_l                                NaN    NaN    NaN   5.5957\n",
-      "p_vp                               NaN    NaN    NaN   1.4752\n",
-      "p_ebita                            NaN    NaN    NaN      NaN\n",
-      "p_ebit                             NaN    NaN    NaN   4.0409\n",
-      "p_sr                               NaN    NaN    NaN   2.1049\n",
-      "p_ativo                            NaN    NaN    NaN   0.8928\n",
-      "p_capitlgiro                       NaN    NaN    NaN  10.8744\n",
-      "p_ativocirculante                  NaN    NaN    NaN  -1.0748\n",
-      "ev_ebitda                          NaN    NaN    NaN      NaN\n",
-      "ev_ebit                            NaN    NaN    NaN   4.7886\n",
-      "lpa                                NaN    NaN    NaN   7.0501\n",
-      "vpa                                NaN    NaN    NaN  26.7413\n",
-      "peg_Ratio                          NaN    NaN    NaN      NaN\n",
-      "dividaliquida_patrimonioliquido   0.22   0.30   0.27   0.2700\n",
-      "dividaliquida_ebitda               NaN    NaN    NaN      NaN\n",
-      "dividaliquida_ebit                0.79   2.16   0.75   0.7500\n",
-      "patrimonio_ativo                  0.52   0.54   0.52   0.5900\n",
-      "passivo_ativo                     0.46   0.44   0.46   0.3900\n",
-      "liquidezcorrente                  2.93   2.10   1.81   2.0300\n",
-      "margembruta                      54.42  42.78  59.44  59.1900\n",
-      "margemebitda                       NaN    NaN    NaN      NaN\n",
-      "margemebit                       37.16  27.56  48.59  52.0900\n",
-      "margemliquida                    30.17  21.31  36.13  37.6200\n",
-      "roe                              22.09  10.79  26.82  26.3600\n",
-      "roa                              11.46   5.82  14.01  15.6400\n",
-      "roic                             17.46   5.91  20.86  22.7000\n",
-      "giro_ativos                       0.38   0.27   0.39   0.4200\n",
-      "receitas_cagr5                     NaN    NaN    NaN      NaN\n",
-      "lucros_cagr5                       NaN    NaN    NaN      NaN\n"
+      "--- Stock tickers in the list: 219 ---\n"
      ]
     }
    ],
    "source": [
-    "hist_inds = StockHistIndicatorsScraper(stock_ticker).dataframe_format\n",
-    "hist_inds = hist_inds[sorted(hist_inds.columns)]\n",
+    "# Join data from both dataframes\n",
+    "stocks_general_data_df = stocks_general_data_df.join(extra_infos_df)\n",
     "\n",
-    "#show sample of the retrieved data\n",
-    "print(hist_inds[hist_inds.columns[0:4]])"
+    "# show stock tickers count after filter applied\n",
+    "print(f\"--- Stock tickers in the list: {stocks_general_data_df.shape[0]} ---\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Historical data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              2007      2008      2009      2010\n",
-      "earnings  0.394109  1.089846  1.016622  0.984241\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hist_earnings = StockHistEarningsScraper(stock_ticker).dataframe_format\n",
-    "hist_earnings = hist_earnings[sorted(hist_earnings.columns)]\n",
+    "# Concatenate all historical data available in the website (API)\n",
+    "def get_historical_data(stock_ticker: str) -> pandas.DataFrame:\n",
+    "    hist_df = None\n",
     "\n",
-    "#show sample of the retrieved data\n",
-    "print(hist_earnings[hist_earnings.columns[0:4]])"
+    "    # Infos: dy, p_l, p_vp, p_ebita, p_ebit, p_sr, p_ativo, p_capitlgiro,\n",
+    "    #        p_ativocirculante, ev_ebitda, ev_ebit, lpa, vpa, peg_Ratio,\n",
+    "    #        dividaliquida_patrimonioliquido, dividaliquida_ebitda,\n",
+    "    #        dividaliquida_ebit, patrimonio_ativo, passivo_ativo,\n",
+    "    #        liquidezcorrente, margembruta, margemebitda, margemebit,\n",
+    "    #        margemliquida, roe, roa, roic, giro_ativos, receitas_cagr5,\n",
+    "    #        lucros_cagr5\n",
+    "    hist_inds = StockHistIndicatorsScraper(stock_ticker).dataframe_format\n",
+    "    hist_df = pandas.concat([hist_df, hist_inds])\n",
+    "\n",
+    "    # Infos: earnings\n",
+    "    # hist_earnings = StockHistEarningsScraper(stock_ticker).dataframe_format\n",
+    "    # hist_df = pandas.concat([hist_df, hist_earnings])\n",
+    "\n",
+    "    # Infos: payout\n",
+    "    # hist_payouts = StockHistPayoutsScraper(stock_ticker).dataframe_format\n",
+    "    # hist_df = pandas.concat([hist_df, hist_payouts])\n",
+    "\n",
+    "    # Infos: receitaLiquida, despesas, lucroLiquido\n",
+    "    # hist_revenue = StockHistRevenueScraper(stock_ticker).dataframe_format\n",
+    "    # hist_df = pandas.concat([hist_df, hist_revenue])\n",
+    "\n",
+    "    # Infos: margemBruta, margemEbitda, margemEbit, margemLiquida\n",
+    "    # hist_margins = StockHistMarginsScraper(stock_ticker).dataframe_format\n",
+    "    # hist_df = pandas.concat([hist_df, hist_margins])\n",
+    "\n",
+    "    # Infos: ativoTotal, ativoCirculante, ativoNaoCirculante,\n",
+    "    #        passivoTotal, passivoCirculante, passivoNaoCirculante,\n",
+    "    #        patrimonioLiquido\n",
+    "    # hist_actives_passives = StockHistActivesAndPassivesScraper(stock_ticker).dataframe_format\n",
+    "    # hist_df = pandas.concat([hist_df, hist_actives_passives])\n",
+    "\n",
+    "    # sort columns\n",
+    "    hist_df = hist_df[sorted(hist_df.columns)]\n",
+    "\n",
+    "    # return hisotical indicators\n",
+    "    return hist_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        2008  2009  2010       2011\n",
-      "payout   0.0   0.0   0.0  39.549275\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "hist_payouts = StockHistPayoutsScraper(stock_ticker).dataframe_format\n",
-    "hist_payouts = hist_payouts[sorted(hist_payouts.columns)]\n",
+    "# Linear Regression\n",
+    "def get_linear_regression_trend(series: pandas.Series) -> float:\n",
+    "    # reshape\n",
+    "    x = numpy.array(series.index).reshape((-1, 1))\n",
+    "    y = numpy.array(series.values).reshape((-1, 1))\n",
     "\n",
-    "#show sample of the retrieved data\n",
-    "print(hist_payouts[hist_payouts.columns[0:4]])"
+    "    # calculate linear regression slope\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(x, y)\n",
+    "\n",
+    "    # LR\n",
+    "    # model.score(x, y)  # R\n",
+    "    # model.intercept_[0]  # Intercept\n",
+    "    # model.coef_[0][0]  # Slope\n",
+    "\n",
+    "    # predict\n",
+    "    last_year = series.index.max()\n",
+    "    predict_x = numpy.array([last_year, last_year + 1]).reshape((-1, 1))\n",
+    "    predict_result = model.predict(predict_x)\n",
+    "\n",
+    "    # trend in %\n",
+    "    return predict_result[1] / predict_result[0] - 1"
    ]
   },
   {
@@ -257,75 +302,49 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                        2008          2009          2010          2011\n",
-      "receitaLiquida  7.054099e+10  4.849657e+10  8.322501e+10  1.005557e+11\n",
-      "despesas       -3.215562e+10 -2.775039e+10 -3.375607e+10 -4.103345e+10\n",
-      "lucroLiquido    2.127963e+10  1.033695e+10  3.007005e+10  3.782572e+10\n"
+      "100%|██████████| 219/219 [03:25<00:00,  1.07it/s]\n"
      ]
     }
    ],
    "source": [
-    "hist_revenue = StockHistRevenueScraper(stock_ticker).dataframe_format\n",
-    "hist_revenue = hist_revenue[sorted(hist_revenue.columns)]\n",
+    "for stock_ticker in tqdm(stocks_general_data_df.index):\n",
+    "    hd_df = get_historical_data(stock_ticker).T\n",
     "\n",
-    "#show sample of the retrieved data\n",
-    "print(hist_revenue[hist_revenue.columns[0:4]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                2008   2009   2010   2011\n",
-      "margemBruta    54.42  42.78  59.44  59.19\n",
-      "margemEbitda    0.00   0.00   0.00   0.00\n",
-      "margemEbit     37.16  27.56  48.59  52.09\n",
-      "margemLiquida  30.78  21.66  36.55  37.21\n"
-     ]
-    }
-   ],
-   "source": [
-    "hist_margins = StockHistMarginsScraper(stock_ticker).dataframe_format\n",
-    "hist_margins = hist_margins[sorted(hist_margins.columns)]\n",
+    "    # get positives years percentage and last negative year\n",
+    "    for pos_neg_years in [\n",
+    "        \"margembruta\", \"margemliquida\", \"lpa\"\n",
+    "    ]:\n",
+    "        pos_neg_years_df = hd_df[pos_neg_years].dropna() if pos_neg_years in hd_df else []\n",
+    "        if len(pos_neg_years_df) > 0:\n",
+    "            # % yers with positive values\n",
+    "            stocks_general_data_df.loc[\n",
+    "                stocks_general_data_df.index == stock_ticker,\n",
+    "                f\"{pos_neg_years}_pos_years\"\n",
+    "            ] = pos_neg_years_df.ge(0).sum() / len(pos_neg_years_df)\n",
+    "            # last negative year\n",
+    "            neg_years = pos_neg_years_df.loc[pos_neg_years_df.lt(0)]\n",
+    "            if len(neg_years) > 0:\n",
+    "                stocks_general_data_df.loc[\n",
+    "                    stocks_general_data_df.index == stock_ticker,\n",
+    "                    f\"{pos_neg_years}_last_negative_year\"\n",
+    "                ] = neg_years.index[-1]\n",
     "\n",
-    "#show sample of the retrieved data\n",
-    "print(hist_margins[hist_margins.columns[0:4]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                              2008          2009          2010          2011\n",
-      "ativoTotal            1.856155e+11  1.777382e+11  2.146621e+11  2.417831e+11\n",
-      "ativoCirculante       5.475374e+10  3.676495e+10  5.426873e+10  4.209522e+10\n",
-      "ativoNaoCirculante    1.308617e+11  1.409732e+11  1.603943e+11  1.996879e+11\n",
-      "passivoTotal          8.461464e+10  7.744296e+10  9.833525e+10  9.509274e+10\n",
-      "passivoCirculante     1.869604e+10  1.747328e+10  2.996756e+10  2.068676e+10\n",
-      "passivoNaoCirculante  0.000000e+00  0.000000e+00  6.695108e+10  7.286767e+10\n",
-      "patrimonioLiquido     1.010008e+11  1.002952e+11  1.163269e+11  1.466904e+11\n"
-     ]
-    }
-   ],
-   "source": [
-    "hist_actives_passives = StockHistActivesAndPassivesScraper(stock_ticker).dataframe_format\n",
-    "hist_actives_passives = hist_actives_passives[sorted(hist_actives_passives.columns)]\n",
-    "\n",
-    "#show sample of the retrieved data\n",
-    "print(hist_actives_passives[hist_actives_passives.columns[0:4]])"
+    "    # get trend info\n",
+    "    for hist_trend_ind in [\n",
+    "        \"margembruta\", \"margemliquida\", \"lpa\", \"vpa\",\n",
+    "        \"dividaliquida_patrimonioliquido\", \"dividaliquida_ebit\",\n",
+    "        \"passivo_ativo\", \"liquidezcorrente\"\n",
+    "    ]:\n",
+    "        hist_trend_df = hd_df[hist_trend_ind].dropna() if hist_trend_ind in hd_df else []\n",
+    "        if len(hist_trend_df) > 0:\n",
+    "            # trend\n",
+    "            stocks_general_data_df.loc[\n",
+    "                stocks_general_data_df.index == stock_ticker,\n",
+    "                f\"{hist_trend_ind}_trend\"\n",
+    "            ] = get_linear_regression_trend(hist_trend_df)"
    ]
   },
   {
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
