Stocks filter script

--- a/notebooks/statusinvest.ipynb
+++ b/notebooks/statusinvest.ipynb
@@ -57,11 +57,11 @@
      "output_type": "stream",
      "text": [
       "TICKER  PRECO    DY   P/L  P/VP  P/ATIVOS  MARGEM BRUTA  MARGEM EBIT  MARG. LIQUIDA  P/EBIT\n",
-      " VALE3  67.76  8.97  6.47  1.62      0.69         40.12        31.07          23.03    4.80\n",
-      " PETR4  40.45 18.09  3.85  1.37      0.51         51.08        38.69          25.53    2.54\n",
-      " ITUB4  32.78  3.89 10.10  1.75      0.13         30.03         9.92           8.30    8.45\n",
-      " BBDC4  15.35  7.25 11.80  0.98      0.09         30.94         3.95           6.18   18.48\n",
-      " BBAS3  56.45  8.11  4.86  0.98      0.07         32.66        15.94          12.40    3.78\n",
+      " VALE3  66.22  9.18  6.33  1.58      0.67         40.12        31.07          23.03    4.69\n",
+      " PETR4  41.20 17.76  3.93  1.39      0.52         51.08        38.69          25.53    2.59\n",
+      " ITUB4  32.79  3.83 10.10  1.75      0.13         30.03         9.92           8.30    8.45\n",
+      " BBDC4  15.33  7.26 11.78  0.98      0.09         30.94         3.95           6.18   18.45\n",
+      " BBAS3  57.53  7.95  4.95  0.99      0.07         32.66        15.94          12.40    3.85\n",
       "--- Total stock tickers in the list: 620 ---\n"
      ]
     }
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stock tickers in the list: 219 ---\n"
+      "--- Filtered stock tickers in the list: 216 ---\n"
      ]
     }
    ],
@@ -145,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 219/219 [04:54<00:00,  1.35s/it]"
+      "100%|██████████| 216/216 [04:18<00:00,  1.20s/it]"
      ]
     },
     {
@@ -153,19 +153,19 @@
      "output_type": "stream",
      "text": [
       "      Vol Histórica Tag Along Tickers Opções      Segmento Free Float\n",
-      "VALE3     26.615409    100.0%         1000.0  Novo Mercado     98.01%\n",
-      "PETR4     30.550062    100.0%         1309.0       Nível 2     63.39%\n",
-      "ITUB4     22.506656     80.0%          414.0       Nível 1     52.89%\n",
-      "BBDC4     28.159352     80.0%          488.0       Nível 1     62.46%\n",
-      "BBAS3       22.7558    100.0%          639.0  Novo Mercado     49.58%\n",
+      "VALE3     26.264967    100.0%         1032.0  Novo Mercado     98.01%\n",
+      "PETR4     30.211307    100.0%         1381.0       Nível 2     63.39%\n",
+      "ITUB4     22.422113     80.0%          435.0       Nível 1     52.89%\n",
+      "BBDC4     28.054123     80.0%          516.0       Nível 1     62.46%\n",
+      "BBAS3      22.73157    100.0%          658.0  Novo Mercado     49.58%\n",
       "...             ...       ...            ...           ...        ...\n",
-      "SGPS3    146.992397    100.0%            0.0  Novo Mercado     47.08%\n",
-      "EUCA4     31.841553        --            0.0       Nível 1     74.79%\n",
-      "CAMB3     46.587811        --            0.0                   100.0%\n",
-      "ELMD3     45.772554    100.0%            0.0  Novo Mercado     37.63%\n",
-      "LAND3     32.747721    100.0%            0.0  Novo Mercado     31.81%\n",
+      "CSUD3     36.762345    100.0%            0.0  Novo Mercado     44.26%\n",
+      "EUCA4     31.780788        --            0.0       Nível 1     74.79%\n",
+      "ELMD3     45.847276    100.0%            0.0  Novo Mercado     37.63%\n",
+      "ENJU3      64.77082    100.0%            1.0  Novo Mercado     74.82%\n",
+      "LAND3     32.800999    100.0%            0.0  Novo Mercado     31.81%\n",
       "\n",
-      "[219 rows x 5 columns]\n"
+      "[216 rows x 5 columns]\n"
      ]
     },
     {
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Stock tickers in the list: 219 ---\n"
+      "--- Stock tickers in the list: 216 ---\n"
      ]
     }
    ],
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 219/219 [03:25<00:00,  1.07it/s]\n"
+      "100%|██████████| 216/216 [02:42<00:00,  1.33it/s]\n"
      ]
     }
    ],
