stocks-filter spreadsheet file for analysis

--- a/notebooks/fundamentus.ipynb
+++ b/notebooks/fundamentus.ipynb
@@ -50,11 +50,11 @@
      "output_type": "stream",
      "text": [
       "Papel  Cotação   P/L  P/VP   PSR Div.Yield  P/Ativo  P/Cap.Giro  P/EBIT  P/Ativ Circ.Liq  EV/EBIT  EV/EBITDA\n",
-      "VALE3    68.78  6.57  1.64 1.513     8.84%    0.701       60.60    3.90            -1.79     4.53       3.78\n",
-      "PETR4    40.32  3.84  1.36 0.981    17.97%    0.513      -72.45    2.18            -1.07     3.17       2.42\n",
-      "ITUB4    32.43 10.23  1.81 0.000     3.87%    0.000        0.00    0.00             0.00     0.00       0.00\n",
-      "BBDC4    15.27 10.94  1.01 0.000      7.3%    0.000        0.00    0.00             0.00     0.00       0.00\n",
-      "PRIO3    44.09  8.63  3.05 3.877     0.16%    1.379       32.01    6.97            -3.73     8.44       6.32\n",
+      "VALE3    67.49  6.45  1.61 1.485     9.01%    0.687       59.46    3.83            -1.76     4.46       3.72\n",
+      "PETR4    42.90  4.09  1.45 1.043    16.89%    0.546      -77.08    2.32            -1.14     3.31       2.53\n",
+      "ITUB4    34.92 10.25  1.88 0.000      3.6%    0.000        0.00    0.00             0.00     0.00       0.00\n",
+      "BBDC4    13.65  9.61  0.90 0.000     8.16%    0.000        0.00    0.00             0.00     0.00       0.00\n",
+      "BBAS3    58.92  5.02  1.03 0.000     7.75%    0.000        0.00    0.00             0.00     0.00       0.00\n",
       "--- Total stock tickers in the list: 983 ---\n"
      ]
     }
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stock tickers in the list: 213 ---\n"
+      "--- Filtered stock tickers in the list: 211 ---\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 213/213 [04:16<00:00,  1.20s/it]\n"
+      "100%|██████████| 211/211 [04:51<00:00,  1.38s/it]\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Filtered stocks data in the list: 212 ---\n"
+      "--- Filtered stocks data in the list: 210 ---\n"
      ]
     }
    ],
@@ -176,12 +176,12 @@
      "output_type": "stream",
      "text": [
       "Papel  Tipo                   Empresa                           Setor                          Subsetor  Cotação\n",
-      "VALE3 ON NM                VALE ON NM                       Mineração                Minerais Metálicos    68.78\n",
-      "PETR4    PN              PETROBRAS PN Petróleo, Gás e Biocombustíveis Exploração, Refino e Distribuição    40.32\n",
-      "ITUB4 PN N1        ITAUUNIBANCO PN N1      Intermediários Financeiros                            Bancos    32.43\n",
-      "BBDC4 PN N1 BANCO BRADESCO S.A. PN N1      Intermediários Financeiros                            Bancos    15.27\n",
-      "PRIO3    ON               PETRORIO ON Petróleo, Gás e Biocombustíveis Exploração, Refino e Distribuição    44.09\n",
-      "--- Total stock data rows in the list: 212 ---\n"
+      "VALE3 ON NM                VALE ON NM                       Mineração                Minerais Metálicos    67.49\n",
+      "PETR4    PN              PETROBRAS PN Petróleo, Gás e Biocombustíveis Exploração, Refino e Distribuição    42.90\n",
+      "ITUB4 PN N1        ITAUUNIBANCO PN N1      Intermediários Financeiros                            Bancos    34.92\n",
+      "BBDC4 PN N1 BANCO BRADESCO S.A. PN N1      Intermediários Financeiros                            Bancos    13.65\n",
+      "BBAS3    ON   BANCO DO BRASIL S.A. ON      Intermediários Financeiros                            Bancos    58.92\n",
+      "--- Total stock data rows in the list: 210 ---\n"
      ]
     }
    ],
@@ -264,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
