--- a/notebooks/fundamentei.ipynb
+++ b/notebooks/fundamentei.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@retry(stop=stop_after_attempt(5), wait=wait_random(min=10, max=20))\n",
+    "@retry(stop=stop_after_attempt(5), wait=wait_random(min=1, max=5))\n",
     "def get_stock_infos_df(stock_ticker: str) -> pandas.DataFrame:\n",
     "    return StockInfosScraper(stock_ticker).dataframe_format"
    ]
@@ -85,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 220/220 [14:28<00:00,  3.95s/it]"
+      "100%|██████████| 216/216 [13:12<00:00,  3.67s/it]"
      ]
     },
     {
@@ -95,18 +95,18 @@
       "      Ticker  Nome da Empresa Nota dos Usuários\n",
       "VALE3  VALE3             Vale               4.3\n",
       "PETR4  PETR4        Petrobras               3.7\n",
-      "ITUB4  ITUB4       Banco Itaú               4.8\n",
-      "BBDC4  BBDC4   Banco Bradesco               4.3\n",
+      "ITUB4  ITUB4       Banco Itaú               4.9\n",
+      "BBDC4  BBDC4   Banco Bradesco               4.2\n",
       "BBAS3  BBAS3  Banco do Brasil               4.7\n",
       "...      ...              ...               ...\n",
+      "CSUD3  CSUD3              CSU               4.2\n",
       "EUCA4  EUCA4          Eucatex               2.7\n",
-      "CAMB3  CAMB3          Cambuci               3.9\n",
+      "APER3  APER3    Alper Seguros                 2\n",
       "ELMD3  ELMD3      Eletromidia               2.6\n",
       "LAND3  LAND3      Terra Santa               3.8\n",
-      "FIQE3  FIQE3         Unifique               4.4\n",
       "\n",
-      "[213 rows x 3 columns]\n",
-      "Filed stock tickers: ['RCSL3', 'BOAS3', 'SQIA3', 'ENBR3', 'MODL3', 'PARD3', 'BRPR3']\n"
+      "[209 rows x 3 columns]\n",
+      "Filed stock tickers: ['AMAR3', 'BOAS3', 'SQIA3', 'ENBR3', 'MODL3', 'PARD3', 'BRPR3']\n"
      ]
     },
     {
@@ -170,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
