--- a/notebooks/statusinvest.ipynb
+++ b/notebooks/statusinvest.ipynb
@@ -57,11 +57,11 @@
      "output_type": "stream",
      "text": [
       "TICKER  PRECO    DY   P/L  P/VP  P/ATIVOS  MARGEM BRUTA  MARGEM EBIT  MARG. LIQUIDA  P/EBIT\n",
-      " VALE3  66.22  9.18  6.33  1.58      0.67         40.12        31.07          23.03    4.69\n",
-      " PETR4  41.20 17.76  3.93  1.39      0.52         51.08        38.69          25.53    2.59\n",
-      " ITUB4  32.79  3.83 10.10  1.75      0.13         30.03         9.92           8.30    8.45\n",
-      " BBDC4  15.33  7.26 11.78  0.98      0.09         30.94         3.95           6.18   18.45\n",
-      " BBAS3  57.53  7.95  4.95  0.99      0.07         32.66        15.94          12.40    3.85\n",
+      " VALE3  66.01  9.21  6.31  1.58      0.67         40.12        31.07          23.03    4.67\n",
+      " PETR4  42.45 17.26  4.04  1.43      0.54         51.08        38.69          25.53    2.67\n",
+      " ITUB4  35.68  3.52 10.99  1.90      0.14         30.03         9.92           8.30    9.20\n",
+      " BBDC4  13.97  7.97 10.74  0.89      0.08         30.94         3.95           6.18   16.82\n",
+      " BBAS3  59.30  7.72  5.10  1.03      0.08         32.66        15.94          12.40    3.97\n",
       "--- Total stock tickers in the list: 620 ---\n"
      ]
     }
@@ -145,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 216/216 [04:18<00:00,  1.20s/it]"
+      "100%|██████████| 216/216 [04:38<00:00,  1.29s/it]"
      ]
     },
     {
@@ -153,17 +153,17 @@
      "output_type": "stream",
      "text": [
       "      Vol Histórica Tag Along Tickers Opções      Segmento Free Float\n",
-      "VALE3     26.264967    100.0%         1032.0  Novo Mercado     98.01%\n",
-      "PETR4     30.211307    100.0%         1381.0       Nível 2     63.39%\n",
-      "ITUB4     22.422113     80.0%          435.0       Nível 1     52.89%\n",
-      "BBDC4     28.054123     80.0%          516.0       Nível 1     62.46%\n",
-      "BBAS3      22.73157    100.0%          658.0  Novo Mercado     49.58%\n",
+      "VALE3     26.432432    100.0%          992.0  Novo Mercado     98.01%\n",
+      "PETR4     30.091372    100.0%         1383.0       Nível 2     63.39%\n",
+      "ITUB4     21.020788     80.0%          456.0       Nível 1     52.89%\n",
+      "BBDC4     31.188926     80.0%          576.0       Nível 1     62.46%\n",
+      "BBAS3     22.589095    100.0%          688.0  Novo Mercado     49.58%\n",
       "...             ...       ...            ...           ...        ...\n",
-      "CSUD3     36.762345    100.0%            0.0  Novo Mercado     44.26%\n",
-      "EUCA4     31.780788        --            0.0       Nível 1     74.79%\n",
-      "ELMD3     45.847276    100.0%            0.0  Novo Mercado     37.63%\n",
-      "ENJU3      64.77082    100.0%            1.0  Novo Mercado     74.82%\n",
-      "LAND3     32.800999    100.0%            0.0  Novo Mercado     31.81%\n",
+      "VIVR3     58.741078    100.0%            0.0  Novo Mercado    550.71%\n",
+      "APER3      47.71531    100.0%            0.0  Novo Mercado    133.98%\n",
+      "ELMD3     45.947894    100.0%            0.0  Novo Mercado     37.63%\n",
+      "ENJU3     63.279128    100.0%            1.0  Novo Mercado     74.82%\n",
+      "LAND3     32.365891    100.0%            0.0  Novo Mercado     31.81%\n",
       "\n",
       "[216 rows x 5 columns]\n"
      ]
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 216/216 [02:42<00:00,  1.33it/s]\n"
+      "100%|██████████| 216/216 [03:11<00:00,  1.13it/s]\n"
      ]
     }
    ],
@@ -386,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
