--- a/notebooks/stocks_filter.ipynb
+++ b/notebooks/stocks_filter.ipynb
@@ -12,24 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\maico\\AppData\\Local\\Temp\\ipykernel_5672\\3648170110.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas"
    ]
@@ -262,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +267,7 @@
       "PARD3    NaN              NaN                              NaN\n",
       "BRPR3    NaN              NaN                              NaN\n",
       "\n",
-      "[220 rows x 3 columns]\n"
+      "[216 rows x 3 columns]\n"
      ]
     }
    ],
@@ -359,11 +344,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_infos_df.to_csv(\"../outputs/stocks_filter.csv\", sep=\";\", index=False)"
+    "stock_infos_df.to_csv(\"../outputs/stocks_filter.csv\", sep=\";\")\n",
+    "stock_infos_df.to_excel(\"../outputs/stocks_filter.xlsx\")"
    ]
   }
  ],
